# simple-function

./: CMakeLists.txt  README.md
include/simple/: function.hpp
src/: main.cpp
